# myah

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BLOG.md  CHANGELOG.md  CLAUDE.md  CONCEPTS.md  README.md  ROADMAP.md  WORKLOG.md  agent.py  config.py  display.py  env.py  main.py  permissions.py  pyproject.toml  roadmap.md  security.py
.claude/skills/ship/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
agent/: __init__.py  context.py  loop.py  skills.py  status.py  system_prompt.py  tokens.py
display/: __init__.py  phosphor.py  previews.py  streaming.py  tools.py
docs/: BLOG_context_management_at_2k.md  BUILD_NOTES.md  CONCEPTS.md  HANDBOOK.md  ROADMAP.md  WORKLOG.md
evals/: checks.py  runner.py
evals/fixtures/commit_msg_from_diff/: DIFF.txt
evals/fixtures/edit_rename/: calculator.py  sample.py  shapes.py
evals/fixtures/edit_rename/tests/: test_shapes.py
evals/fixtures/fix_failing_test/: calc.py
evals/fixtures/fix_failing_test/tests/: test_calc.py
evals/fixtures/glob_resolve_bare_name/: README.md
evals/fixtures/glob_resolve_bare_name/src/utils/: widget.py
evals/fixtures/multi_turn_fix/: calc.py
evals/fixtures/multi_turn_fix/tests/: test_calc.py
evals/fixtures/pagination_read/: long.py
evals/fixtures/plan_mode_plan_only/: README.md
evals/fixtures/scoped_bugfix/: config.py  mathlib.py  stringutil.py
evals/fixtures/scoped_bugfix/tests/: test_mathlib.py
evals/fixtures/subagent_delegation/: README.md
evals/fixtures/subagent_delegation/lib/: auth.py  cache.py  config.py  logger.py  parser.py
evals/fixtures/tdd_new_fn/: stringutil.py
evals/fixtures/tdd_new_fn/tests/: test_stringutil.py
evals/tasks/: commit_msg_from_diff.py  edit_rename.py  edit_rename_symbol.py  find_string.py  find_symbol_all.py  fix_failing_test.py  glob_resolve_bare_name.py  multi_turn_fix.py  pagination_read.py  plan_mode_plan_only.py  scoped_bugfix.py  subagent_delegation.py  tdd_new_fn.py
providers/: __init__.py  anthropic_adapter.py  base.py  context_sizes.py  ollama_adapter.py  openai_compat.py  pricing.py
repl/: __init__.py  app.py  commands.py  config_loader.py  console.py  export.py  permission_bridge.py  persistence.py  screen.py  state.py  tool_registry.py  ui.py
scripts/: run_evals.py  smoke_ctx.py
tests/: conftest.py  test_anthropic_adapter.py  test_app.py  test_clipboard.py  test_compact.py  test_config_loader.py  test_display.py  test_env.py  test_evals_runner.py  test_export.py  test_get_context_size.py  test_git_checkout.py  test_git_tools.py  test_image_repl.py  test_image_translation.py  test_integration.py  test_ollama_adapter.py  test_openai_compat.py  test_permission_bridge.py  test_permission_gate.py  test_permission_preview_write_file.py  test_phosphor.py  test_pricing.py  test_provider_factory.py  test_repl_ui.py  test_rewind.py  test_screen.py  test_security.py  test_session_load.py  test_skills.py  test_slash_commands.py  test_subagent.py  test_tokens.py  test_tool_registry_cwd.py  test_tool_registry_version.py  test_tools_cd.py  test_tools_files.py  test_tools_notes.py  test_tools_notes_backlinks_tags.py  test_tools_search.py  (+6 more)
tools/: __init__.py  _web_common.py  bash.py  cd.py  clipboard.py  files.py  git.py  harness.py  notes.py  search.py  spec.py  subagent.py  todo.py  utils.py  vars.py  vault.py  web_fetch.py  web_search.py
