[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mia"
version = "0.1.0"
description = "A hand-rolled agent harness built to learn how Claude Code / Cursor work under the hood."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Andrej Focic" }]
keywords = ["agent", "llm", "ollama", "tool-use", "repl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "rich>=15.0.0",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/anfocic/mia"
Issues = "https://github.com/anfocic/mia/issues"

[tool.setuptools]
# Flat layout: top-level modules (main, config, display, permissions)
# alongside four packages (agent, providers, tools, repl). No src/ dir —
# this is a pedagogical harness, not a library.
py-modules = ["main", "config", "display", "permissions"]
packages = ["agent", "providers", "tools", "repl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
]
ignore = [
    "E501",  # line too long (rich markup strings get long)
    "E731",  # lambda assignments (used intentionally for fail-closed default)
]

[tool.ruff.lint.per-file-ignores]
# agent/__init__.py intentionally defines READ_ONLY_TOOLS before re-export
# imports to break a cycle (loop + system_prompt both import it back).
"agent/__init__.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.mypy]
python_version = "3.11"
# Pragmatic defaults: catch real bugs without forcing every lambda and
# pytest fixture to carry annotations. Tighten later by enabling
# `disallow_untyped_defs` once test helpers are all annotated.
exclude = ["venv", "build", "dist"]
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = false

[tool.coverage.run]
branch = true
source = ["agent", "repl", "providers", "tools", "display", "permissions", "config", "main"]
omit = ["tests/*", "scripts/*", "venv/*"]

[tool.coverage.report]
# Current floor at 40% — above actual (~42%). The gate catches regressions
# but isn't aspirational; untested files are provider adapters (SDK wrappers
# that need network mocking to exercise) and tool implementations (which
# shell out). Ratchet up as those get mocked test coverage.
fail_under = 40
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
